<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Pontiland</groupId>
  <artifactId>Pontiland</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <!-- Target Java 21 bytecode for tooling compatibility while building with JDK 24 -->
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jme.version>3.8.1-stable</jme.version>
    <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
    <jacoco.plugin.version>0.8.12</jacoco.plugin.version>
    <checkstyle.plugin.version>3.3.1</checkstyle.plugin.version>
    <checkstyle.version>10.18.2</checkstyle.version>
    <spotbugs.plugin.version>4.9.8.1</spotbugs.plugin.version>
    <junit.jupiter.version>5.10.2</junit.jupiter.version>
    <sonar.organization>samu-kiss</sonar.organization>
    <sonar.projectKey>Samu-Kiss_UNI-25-03-NullPointerException</sonar.projectKey>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-core</artifactId>
      <version>${jme.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-desktop</artifactId>
      <version>${jme.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-lwjgl3</artifactId>
      <version>${jme.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-plugins</artifactId>
      <version>${jme.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-effects</artifactId>
      <version>${jme.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jmonkeyengine</groupId>
      <artifactId>jme3-bullet-native</artifactId>
      <version>3.3.2-stable</version>
    </dependency>
    <dependency>
      <groupId>com.simsilica</groupId>
      <artifactId>lemur</artifactId>
      <version>1.16.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.2</version>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.3.232</version>
    </dependency>

    <!-- JUnit 5 for tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Mockito for unit testing -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.14.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin.version}</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.plugin.version}</version>
        <configuration>
          <useModulePath>false</useModulePath>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>test</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.plugin.version}</version>
        <configuration>
          <failsOnError>true</failsOnError>
          <consoleOutput>true</consoleOutput>
          <configLocation>${project.basedir}/config/checkstyle/checkstyle.xml</configLocation>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <executions>
          <execution>
            <id>checkstyle-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>${spotbugs.plugin.version}</version>
        <executions>
          <execution>
            <id>spotbugs-report</id>
            <goals>
              <goal>spotbugs</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <effort>Min</effort>
              <threshold>Low</threshold>
              <failOnError>false</failOnError>
              <xmlOutput>true</xmlOutput>
              <htmlOutput>true</htmlOutput>
              <excludeFilterFile>${project.basedir}/config/spotbugs/spotbugs-ignore.xml</excludeFilterFile>
              <spotbugsXmlOutputFilename>spotbugs-report.xml</spotbugsXmlOutputFilename>
            </configuration>
          </execution>
          <execution>
            <id>spotbugs-enforce-analysis</id>
            <goals>
              <goal>spotbugs</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <failOnError>true</failOnError>
              <effort>Max</effort>
              <threshold>Low</threshold>
              <xmlOutput>true</xmlOutput>
              <htmlOutput>false</htmlOutput>
              <excludeFilterFile>${project.basedir}/config/spotbugs/spotbugs-ignore.xml</excludeFilterFile>
              <includeFilterFile>${project.basedir}/config/spotbugs/spotbugs-enforce.xml</includeFilterFile>
              <spotbugsXmlOutputFilename>spotbugs-report-enforce.xml</spotbugsXmlOutputFilename>
            </configuration>
          </execution>
          <execution>
            <id>spotbugs-enforce</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <failOnError>true</failOnError>
              <spotbugsXmlOutputFilename>spotbugs-enforce.xml</spotbugsXmlOutputFilename>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Code formatting & style enforcement (similar to IntelliJ Ctrl+Alt+L) -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.43.0</version>
        <configuration>
          <java>
            <!-- Google Java Format is close to IntelliJ default; adjust if you later add a custom style -->
            <googleJavaFormat>
              <version>1.17.0</version>
            </googleJavaFormat>
            <removeUnusedImports></removeUnusedImports>
            <importOrder></importOrder>
            <includes>
              <include>src/main/java/**/*.java</include>
              <include>src/test/java/**/*.java</include>
            </includes>
          </java>
          <pom>
            <sortPom></sortPom>
            <encoding>UTF-8</encoding>
          </pom>
        </configuration>
        <executions>
          <!-- Runs formatting check during 'mvn verify' (CI / local) -->
          <execution>
            <id>spotless-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>5.1.0.4751</version>
      </plugin>
    </plugins>
  </build>
</project>
